# cells

./: .gitignore  Cargo.toml  README.md  flake.nix
cells/: Cargo.toml
cells/src/: main.rs
crates/bevy_cells/: Cargo.toml
crates/bevy_cells/assets/shaders/: particle_update.wgsl
crates/bevy_cells/src/: main.rs
crates/cell_engine/: Cargo.toml
crates/cell_engine/src/: components.rs  events.rs  lib.rs  plugins.rs  resources.rs  systems.rs
crates/cell_particle/: Cargo.toml
crates/cell_particle/src/: grid.rs  lib.rs
crates/cell_particle/src/particle/: kind.rs  mod.rs  state.rs
crates/cell_particle/src/rule/: mod.rs
crates/nannou_cells/: Cargo.toml
crates/nannou_cells/src/: main.rs
crates/percentage/: Cargo.toml
crates/percentage/src/: lib.rs
