[workspace.package]
version = "0.1.0"
authors = ["Jens"]
edition = "2021"
description = "A cell-based engine for particle simulations, e.g. the classic falling sand"
repository = "https://github.com/jens-hj/cellengine"
license = "MIT"
keywords = ["cell", "engine", "simulation", "game", "sand"]
categories = ["game-engines", "simulation", "falling-sand", "sand"]

[workspace]
members = [
    "crates/bevy_cells",
    "crates/cell_engine",
    "crates/cell_particle",
    "crates/nannou_cells",
    "crates/percentage",
]

resolver = "2"

[workspace.dependencies]
# Internal dependencies
cell_engine = { path = "crates/cell_engine" }
cell_particle = { path = "crates/cell_particle" }
percentage = { path = "crates/percentage" }

# Own dependencies
bevy_catppuccin = { git = "https://github.com/jens-hj/bevy_catppuccin.git", rev = "df2255968c7f357a8201415e5b90c94531cceee9" }
bevy_pointer_to_world = { git = "https://github.com/jens-hj/bevy_pointer_to_world.git", rev = "b385d01ca25d9654cd241c725b31eeb791ef5735" }

# Third party dependencies
nannou = "0.19.0"
rand = "0.9.0"
bevy = "0.15.0"
strum = "0.26.3"
strum_macros = "0.26.4"
