[package]
name = "cell_engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy.workspace = true
bevy_catppuccin.workspace = true
cell_particle.workspace = true
strum.workspace = true
strum_macros.workspace = true
rand.workspace = true
bevy_pointer_to_world.workspace = true
percentage.workspace = true
