[package]
name = "cell_particle"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
percentage.workspace = true
strum.workspace = true
strum_macros.workspace = true
